--- a/user1.html
+++ b/user1.html
@@ -1,1 +1,14 @@
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>HTML Buttons</h2>
+<p>HTML buttons are defined with the button tag:</p>
+
+<button>Click me</button>
+
+</body>
 <script id="chat-init" src="https://stg.zotly.ai/account/js/init.js?id=5548997"></script>
+
+</html>
