--- a/user1.html
+++ b/user1.html
@@ -3,10 +3,7 @@
 <html>
 <body>
 
-<h2>HTML Buttons</h2>
-<p>HTML buttons are defined with the button tag:</p>
-
-<button>Click me</button>
+<h2>USER 1</h2>
 
 </body>
 <script id="chat-init" src="https://stg.zotly.ai/account/js/init.js?id=5548997"></script>
